<resources>
    <string name="app_name">支出管理大師</string>
    <string name="welcome_title">歡迎來到 MoneyReminder , \n輕鬆記帳、輕鬆省錢．</string>
    <string name="logout_title">登出訊息</string>
    <string name="logout_content">是否確定要登出?</string>
    <string name="confirm">確定</string>
    <string name="create_sort">建立</string>
    <string name="cancel">取消</string>
    <string name="money_list">明細</string>
    <string name="money_calendar">日曆</string>
    <string name="money_user">會員</string>
    <string name="test_btn">測試專用</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_list_fragment">ListFragment</string>
    <string name="hello_user_fragment">UserFragment</string>
    <string name="hello_calendar_fragment">CalendarFragment</string>
    <string name="in_come">收入\n$0</string>
    <string name="expenditure">支出\n$0</string>
    <string name="in_come_string">收入</string>
    <string name="expenditure_string">支出</string>
    <string name="sort">分類</string>
    <string name="list">明細</string>
    <string name="enter_money">輸入金額</string>
    <string name="zero">0</string>
    <string name="date">日期</string>
    <string name="not_yet_to_chose">尚未分類</string>
    <string name="description">描述...</string>
    <string name="choice_sort">選取分類</string>
    <string name="recently">最近使用</string>
    <string name="create">主要分類</string>
    <string name="no_data">暫無資料</string>
    <string name="enter_sort_type">輸入分類..</string>
    <string name="sort_type_info">請選擇一個圖示↓</string>
    <string name="no_data_yet">尚無帳務資料.</string>
    <string name="error_title">錯誤訊息</string>
    <string name="recently_describe">最近使用的描述</string>
    <string name="recently_describe_no_data">無資料</string>
    <string name="create_main_sort">建立主分類</string>
    <string name="create_second_sort">建立次分類</string>
    <string name="enter_second_sort_type">輸入描述</string>
    <string name="add">新增</string>
    <string name="ignore">忽略</string>
    <string name="add_finish">新增次分類完畢</string>
    <string name="second_sort">次分類</string>
    <string name="budget_title">10月預算</string>
    <string name="setting">設定預算</string>
    <string name="account_title">帳號設定</string>
    <string name="enter_budget">請輸入預算</string>
    <string name="set_time_range">設定日期區間</string>
    <string name="signout">登出</string>
    <string name="sort_type">設定資料排序</string>
    <string name="sort_near">由近到遠</string>
    <string name="sort_far">由遠到近</string>
    <string name="sort_one">一號開始</string>
    <string name="sort_five">五號開始</string>
    <string name="sort_ten">十號開始</string>
    <string name="long_analysis">長條分析圖</string>
    <string name="pie_analysis">圓餅分析圖</string>
    <string name="set_analysis">設定分析圖</string>
</resources>