<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/detail_item_background"
    android:padding="2dp"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/day_range_dialog_title"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/sort_type"
        android:gravity="center"
        android:textColor="@color/white"
        android:padding="10dp"
        android:textSize="@dimen/normal_text_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        app:layout_constraintTop_toBottomOf="@id/day_range_dialog_title"
        android:background="@color/white"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:textColor="@color/app_main_color"
            android:id="@+id/day_range_dialog_rad_1"
            app:layout_constraintRight_toLeftOf="@id/day_range_dialog_rad_5"
            android:text="@string/sort_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <RadioButton
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toLeftOf="@id/day_range_dialog_rad_10"
            app:layout_constraintLeft_toRightOf="@id/day_range_dialog_rad_1"
            android:textColor="@color/app_main_color"
            android:id="@+id/day_range_dialog_rad_5"
            android:text="@string/sort_five"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <RadioButton
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/day_range_dialog_rad_5"
            android:textColor="@color/app_main_color"
            android:id="@+id/day_range_dialog_rad_10"
            android:text="@string/sort_ten"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
