<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/sort_type_title"
        android:padding="5dp"
        android:textSize="@dimen/normal_text_size"
        android:textColor="@color/app_main_color"
        android:text="@string/create_main_sort"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <EditText
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/sort_type_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/sort_type_btn_save"
        android:layout_marginEnd="15dp"
        android:id="@+id/sort_type_edContent"
        android:hint="@string/enter_sort_type"
        android:backgroundTint="@color/app_main_color"
        android:layout_width="0dp"
        android:layout_height="@dimen/sort_type_edit_height"/>

    <Button
        android:id="@+id/sort_type_btn_save"
        android:text="@string/create_sort"
        android:textColor="@color/white"
        android:background="@drawable/calculator_ok_btn_selector"
        app:layout_constraintTop_toTopOf="@id/sort_type_edContent"
        app:layout_constraintBottom_toBottomOf="@id/sort_type_edContent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="@dimen/button_size"
        android:layout_height="@dimen/button_height"/>

    <TextView
        android:textColor="@color/app_main_color"
        android:id="@+id/sort_type_info"
        android:text="@string/sort_type_info"
        app:layout_constraintTop_toBottomOf="@id/sort_type_edContent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/sort_type_recycler_view"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/sort_type_info"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


</androidx.constraintlayout.widget.ConstraintLayout>
