<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:padding="2dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/detail_item_background"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/budget_dialog_title"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="10dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:text="@string/budget_title"
        android:textSize="@dimen/normal_text_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        app:layout_constraintTop_toBottomOf="@id/budget_dialog_title"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/budget_dialog_edit"
            android:backgroundTint="@color/app_main_color"
            app:layout_constraintTop_toTopOf="parent"
            android:hint="@string/enter_budget"
            android:layout_marginTop="5dp"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="@dimen/budget_dialog_height"/>

        <TextView
            app:layout_constraintTop_toBottomOf="@id/budget_dialog_edit"
            android:layout_marginTop="15dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="15dp"
            android:layout_marginEnd="15dp"
            android:id="@+id/budget_dialog_confirm"
            android:text="@string/confirm"
            android:textColor="@color/app_main_color"
            android:textSize="@dimen/normal_text_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            app:layout_constraintTop_toBottomOf="@id/budget_dialog_edit"
            android:layout_marginTop="15dp"
            app:layout_constraintRight_toLeftOf="@id/budget_dialog_confirm"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="15dp"
            android:layout_marginEnd="15dp"
            android:id="@+id/budget_dialog_cancel"
            android:text="@string/cancel"
            android:textColor="@color/app_main_color"
            android:textSize="@dimen/normal_text_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
