<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:padding="2dp"
    android:background="@drawable/detail_item_background"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
        android:id="@+id/second_sort_type_title"
        android:padding="10dp"
        android:textSize="@dimen/normal_text_size"
        android:textColor="@color/white"
        android:text="@string/create_second_sort"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>




    <TextView
        android:id="@+id/second_sort_type_ignore"
        android:padding="5dp"
        android:textSize="@dimen/normal_text_size"
        android:textColor="@color/white"
        android:text="@string/ignore"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/second_sort_type_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        app:layout_constraintTop_toBottomOf="@id/second_sort_type_title"
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="wrap_content">

        <EditText
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/second_sort_type_btn_add"
            android:layout_marginEnd="15dp"
            android:id="@+id/second_sort_type_edContent"
            android:hint="@string/enter_second_sort_type"
            android:backgroundTint="@color/app_main_color"
            android:layout_width="0dp"
            android:layout_height="@dimen/sort_type_edit_height"/>

        <Button
            android:id="@+id/second_sort_type_btn_add"
            android:text="@string/add"
            android:textColor="@color/white"
            android:background="@drawable/calculator_ok_btn_selector"
            app:layout_constraintTop_toTopOf="@id/second_sort_type_edContent"
            app:layout_constraintBottom_toBottomOf="@id/second_sort_type_edContent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_height"/>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/second_sort_type_recycler_view"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/second_sort_type_edContent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintBottom_toTopOf="@id/second_sort_type_btn_save"
            android:layout_marginBottom="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/second_sort_type_btn_save"
            android:text="@string/add_finish"
            android:textColor="@color/white"
            android:background="@drawable/calculator_ok_btn_selector"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"/>


    </androidx.constraintlayout.widget.ConstraintLayout>




</androidx.constraintlayout.widget.ConstraintLayout>
