<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".calculator.CalculatorActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/calculator_tool_bar"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:background="@color/app_main_color"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:id="@+id/calculator_back_btn"
                android:src="@drawable/left_arrow"
                android:contentDescription="@null"
                android:layout_width="@dimen/back_button_size"
                android:layout_height="@dimen/back_button_size"/>

            <TextView
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toRightOf="@id/calculator_back_btn"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="15dp"
                android:textSize="@dimen/calculator_title"
                android:textColor="@color/white"
                android:text="@string/enter_money"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>



        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>

    <View
        android:id="@+id/calculator_line"
        app:layout_constraintTop_toBottomOf="@id/calculator_tool_bar"
        android:background="@color/grey"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <TextView
        android:id="@+id/calculator_content"
        android:textColor="@color/red"
        android:padding="20dp"
        android:textSize="@dimen/calculator_content_text_size"
        android:textStyle="bold"
        android:text="@string/zero"
        app:layout_constraintTop_toBottomOf="@id/calculator_line"
        android:gravity="center|end"
        android:layout_width="match_parent"
        android:layout_height="@dimen/calculator_content_height"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        app:layout_constraintTop_toTopOf="@id/calculator_content"
        android:layout_width="match_parent"
        android:layout_marginTop="5dp"
        android:layout_height="wrap_content">

        <RadioButton
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:button="@null"
            android:textSize="@dimen/radio_text_size"
            app:layout_constraintRight_toLeftOf="@id/calculator_expenditure"
            android:id="@+id/calculator_radio_in_come"
            app:layout_constraintHorizontal_chainStyle="packed"
            android:checked="false"
            android:text="@string/in_come_string"
            android:background="@drawable/radio_button_selector"
            android:gravity="center"
            android:layout_marginEnd="10dp"
            android:layout_width="100dp"
            android:layout_height="40dp"/>
        <RadioButton
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/calculator_radio_in_come"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/calculator_expenditure"
            android:layout_marginStart="10dp"
            android:textSize="@dimen/radio_text_size"
            android:background="@drawable/calculator_in_come_press"
            android:checked="true"
            android:button="@null"
            android:text="@string/expenditure_string"
            android:gravity="center"
            android:layout_width="100dp"
            android:layout_height="40dp"/>


    </androidx.constraintlayout.widget.ConstraintLayout>


    <View
        android:id="@+id/calculator_line2"
        app:layout_constraintTop_toBottomOf="@id/calculator_content"
        android:background="@color/grey"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <androidx.recyclerview.widget.RecyclerView
        app:layout_constraintHorizontal_weight="3"
        android:id="@+id/calculator_number_recycler_view"
        app:layout_constraintTop_toBottomOf="@id/calculator_line2"
        app:layout_constraintRight_toLeftOf="@id/calculator_math_recycler_view"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="0dp"
        android:layout_height="0dp"/>
    <androidx.recyclerview.widget.RecyclerView
        app:layout_constraintHorizontal_weight="1"
        android:id="@+id/calculator_math_recycler_view"
        android:background="@color/grey"
        app:layout_constraintTop_toBottomOf="@id/calculator_line2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/calculator_number_recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"/>





</androidx.constraintlayout.widget.ConstraintLayout>