<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sort.SortActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/sort_tool_bar"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:background="@color/grey"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:id="@+id/sort_back_btn"
                android:src="@drawable/left_arrow"
                android:contentDescription="@null"
                android:layout_width="@dimen/back_button_size"
                android:layout_height="@dimen/back_button_size"/>

            <TextView
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toRightOf="@id/sort_back_btn"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="15dp"
                android:textSize="@dimen/calculator_title"
                android:textColor="@color/black"
                android:text="@string/sort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <ImageView
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginEnd="15dp"
                android:id="@+id/sort_save_btn"
                android:src="@drawable/check"
                android:contentDescription="@null"
                android:layout_width="@dimen/back_button_size"
                android:layout_height="@dimen/back_button_size"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>

    <View
        android:id="@+id/sort_line"
        app:layout_constraintTop_toBottomOf="@id/sort_tool_bar"
        android:background="@color/grey"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        app:layout_constraintTop_toBottomOf="@id/sort_line"
        android:padding="15dp"
        android:id="@+id/sort_date_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/sort_date_title"
            android:text="@string/date"
            android:textSize="@dimen/normal_text_size"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/sort_date_content"
            tools:text="2020/09/18"
            android:textSize="@dimen/normal_text_size"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/sort_date_title"
            android:layout_marginTop="15dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <View
            android:id="@+id/sort_date_line"
            app:layout_constraintTop_toBottomOf="@id/sort_date_content"
            android:layout_marginTop="5dp"
            android:background="@color/black"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        app:layout_constraintTop_toBottomOf="@id/sort_date_area"
        android:padding="10dp"
        android:id="@+id/sort_chose_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/sort_chose_title"
            android:text="@string/sort"
            android:textSize="@dimen/normal_text_size"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <ImageView
            android:id="@+id/sort_chose_icon"
            android:contentDescription="@null"
            app:layout_constraintTop_toTopOf="@id/sort_chose_content"
            app:layout_constraintBottom_toBottomOf="@id/sort_chose_content"
            app:layout_constraintLeft_toLeftOf="parent"
            android:src="@drawable/plus"
            android:layout_width="@dimen/sort_type_icon_size"
            android:layout_height="@dimen/sort_type_icon_size"/>

        <TextView
            android:id="@+id/sort_chose_content"

            android:text="@string/not_yet_to_chose"
            android:textSize="@dimen/normal_text_size"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/sort_chose_title"
            android:layout_marginTop="15dp"
            app:layout_constraintLeft_toRightOf="@id/sort_chose_icon"
            android:layout_marginStart="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <View
            android:id="@+id/sort_chose"
            app:layout_constraintTop_toBottomOf="@id/sort_chose_content"
            android:layout_marginTop="8dp"
            android:background="@color/black"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/sort_description"
        android:hint="@string/description"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="12sp"
        android:layout_marginEnd="12dp"
        android:backgroundTint="@color/black"
        app:layout_constraintTop_toBottomOf="@id/sort_chose_area"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/sort_description_height"/>


</androidx.constraintlayout.widget.ConstraintLayout>